@@ -72,3 +72,17 @@ task dexify(type: Jar) {
 }
 
 task buildDex dependsOn "build", "dexify"
+
+tasks.withType(JavaCompile){
+    targetCompatibility = 8
+    sourceCompatibility = JavaVersion.VERSION_14
+    options.encoding = "UTF-8"
+    options.compilerArgs += ["-Xlint:deprecation"]
+    if(JavaVersion.current() != JavaVersion.VERSION_1_8){
+        options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
+    }
+    compileJava.options.fork = true
+    doFirst{
+        options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
+    }
+}
